--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A Gatsby Starter Project to easily get started with the Portfolio Minimal Theme.",
   "scripts": {
+    "release": "npx gatsby build && gh-pages -d public -b release",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "build": "gatsby build",
